Add container for cells and buttons, add buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
     <body>
         <div class="main-container">
-            
+            <div class="container"></div>
+            <div class="btn-container">
+                <button class="btn btn-start">Start</button>
+                <button class="btn brush">Brush</button>
+                <button class="btn rainbow-btn">Rainbow</button>
+                <button class="btn remove-btn">Eraser</button>
+            </div>
         </div>
     </body>
 </html>
