--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     </head>
 
     <body>
-        <div class="main-container">
-            <div class="container"></div>
-            <div class="btn-container">
-                <button class="btn btn-start">Start</button>
-                <button class="btn brush">Brush</button>
-                <button class="btn rainbow-btn">Rainbow</button>
-                <button class="btn remove-btn">Eraser</button>
+        <div class="wrapper">
+            <h1 class="title">Etch-a-catch</h1>
+            <div class="main-container">
+                <div class="container">
+                </div>
+                <div class="btn-container">
+                    <button class="btn btn-start">Start</button>
+                    <button class="btn brush">Brush</button>
+                    <button class="btn rainbow-btn">Rainbow</button>
+                    <button class="btn remove-btn">Eraser</button>
+                    <button class="btn restart-btn">Restart</button>
+                </div>
             </div>
         </div>
     </body>
